# pf2e-csheet

./: .gitignore  Cargo.toml  README.md  nadia.yaml  shell.nix
aon2e-scraper/: Cargo.toml  build.rs
aon2e-scraper/src/: main.rs  network.rs  parsers.rs  resources.rs
aon2e-scraper/src/parsers/: nlp.rs
aon2e-scraper/src/resources/: class.rs  feats.rs  traits.rs
nix/: rust.nix  sources.json  wasm-bindgen.nix
pf2e-csheet-backend/: Cargo.toml
pf2e-csheet-backend/src/: character.rs  main.rs  resources.rs  server.rs
pf2e-csheet-backend/src/resources/: rref.rs
pf2e-csheet-frontend/: Cargo.toml  build.sh
pf2e-csheet-frontend/src/: icons.rs  lib.rs  resource_manager.rs  typed_select.rs
pf2e-csheet-frontend/src/panes/: core.rs  debug.rs  mod.rs  save_and_load.rs
pf2e-csheet-shared/: Cargo.toml
pf2e-csheet-shared/proptest-regressions/: common.txt
pf2e-csheet-shared/src/: bonuses.rs  calc.rs  character.rs  choices.rs  common.rs  cond.rs  effects.rs  items.rs  lib.rs  macros.rs  parsers.rs  stats.rs  storage.rs  test_helpers.rs
pf2e-csheet-shared/src/common/: rref.rs
pf2e-csheet-shared/src/messages/: mod.rs
resources/crb/: ancestries.yaml  backgrounds.yaml  classes.yaml  feats.yaml  heritages.yaml  items.yaml  monk.yaml
src/: bonuses.rs  character.rs  choices.rs  macros.rs  main.rs  parsers.rs  pdf.rs  qa.rs  raw_pdf_manip.rs  resources.rs  stats.rs  using_pdf_form.rs
src/resources/: ancestry.rs  background.rs  calc.rs  character.rs  class.rs  feat.rs  heritage.rs  item.rs  refs.rs  rref.rs  traits.rs
src/resources/character/: helpers.rs
src/resources/item/: armor.rs  weapon.rs
static/: fonts.css  stylesheet.css
