[package]
name = "pf2e-csheet"
version = "0.1.0"
authors = ["Cassie Meharry <cassie@prophetessof.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lazy_static = "*"
log = "0.4"
lopdf = "0.25"
owning_ref = "0.4"
peg = "0.6"
pretty_env_logger = "0.4"
regex = "1"
rusttype = "0.9"
serde_derive = "1"
serde_with = "^1.4"
serde_yaml = "0.8"
static_assertions = "1"
typemap = "0.3"

[dependencies.pdf_form]
path = "../../sources/pdf_form"

[dependencies.serde]
features = ["derive", "rc"]
version = "1"

[dependencies.smallvec]
features = ["serde", "write", "const_generics"]
version = "1"

[dependencies.smartstring]
features = ["serde"]
version = "0.2"
