[package]
name = "aon2e-scraper"
version = "0.1.0"
authors = ["Cassie Meharry <cassie@prophetessof.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
ego-tree = "*"
lazy_static = "*"
libflate = "1"
log = "0.4"
ordered-float = "2"
peg = "0.6"
pf2e-csheet-shared = { path = "../pf2e-csheet-shared" }
pragmatic-segmenter = "0.1.1"
pretty = "0.10"
pretty_env_logger = "0.4"
serde = "1"
scraper = "0.12"
selectors = "*"
serde_json = "*"
serde_yaml = "0.8"
smallvec = "*"
rand = "0.7"
regex = "1"
reqwest = "0.10"
url = "*"

[dependencies.smartstring]
features = ["serde"]
version = "0.2"

[dependencies.tokio]
features = ["full"]
version = "*"

[dev-dependencies]
pretty_assertions = "0.6"
